第一次提交

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,13 @@
 .DS_Store
-node_modules
-# /dist
+node_modules/
+examples/
+packages/
+public/
+dist/
+vue.config.js
+babel.config.js
+*.map
+*.html
 
 # local env files
 .env.local
@@ -18,4 +25,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.sw*
