--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "vue-cool-loading",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.0",
+  "description": "loading动画",
+  "keywords": ["vue", "loading", "cool", "加载", "动画"],
+  "author": "bin.li",
+  "license": "MIT",
+  "private": false,
+  "main": "lib/loading.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name loading --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
